@@ -15,6 +15,7 @@ if ($staff_picks === false || is_null($staff_picks)) {
         ->select('torrents.poster')
         ->select('torrents.anonymous')
         ->select('torrents.owner')
+        ->select('torrents.imdb_id')
         ->select('torrents.times_completed')
         ->leftJoin('users ON torrents.owner = users.id')
         ->select('users.username')
@@ -53,8 +54,10 @@ $HTMLOUT .= "
 foreach ($staff_picks as $staff_pick) {
     $owner = $anonymous = $name = $poster = $seeders = $leechers = $size = $added = $class = $username = $id = $cat = $image = $times_completed = '';
     extract($staff_pick);
-
     $torrname = htmlsafechars($name);
+    if (empty($poster) && !empty($imdb_id)) {
+        $poster = find_images($imdb_id);
+    }
     $poster = empty($poster) ? "<img src='{$site_config['pic_baseurl']}noposter.png' class='tooltip-poster' />" : "<img src='" . url_proxy($poster, true, 150, null) . "' class='tooltip-poster' />";
 
     if ($anonymous === 'yes' && ($CURUSER['class'] < UC_STAFF || $owner === $CURUSER['id'])) {
