@@ -1,4 +1,5 @@
 28 Oct, 2018
+update: get poster form images table when torrents.poster is empty
 add: .well-known dir
 update: breadcrumbs
 update: resize signature and avatar in forums
